add link to page1.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>kenic.github.io</title>
 </head>
 <body>
-    Template
+   <h1>TEST</h1> 
+<p><a href="page1.html>page 1</a></p>
 </body>
 </html>
